[package]
name = "scoped-env"
version = "1.0.0"
authors = ["Sebastian Malton <sebastian@malton.name>"]
edition = "2018"
license-file = "LICENSE"
description = "A lifetime scoped env variable setting"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
