[package]
name = "scoped-env"
version = "1.0.0"
authors = ["Sebastian Malton <sebastian@malton.name>"]
edition = "2018"
license-file = "LICENSE"
description = "A lifetime scoped env variable setting"
readme = "README.md"
repository = "https://github.com/Nokel81/scoped-env"
keywords = ["env", "lifetime"]
